cabalise build; updated to ghc 7.8.4
Uses parallel build automatically if available.

The horribly hardcoded Setup.hs script does the env variable preprocessor
setup for CONFIG_CAPDL_LOADER_MAX_IRQS.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 syntax: glob
 
-*.hi
-*.o
-parse-capDL
 *.parse
 *.parse.x
 *.out
@@ -13,3 +10,8 @@ parse-capDL
 doc/capDL.pdf
 doc/capDL.aux
 doc/capDL.log
+
+.cabal-sandbox
+cabal.sandbox.config
+dist
+parse-capDL
