--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -29,11 +29,11 @@ executable parse-capDL
   other-extensions:    DeriveDataTypeable, FlexibleInstances,
                        TypeSynonymInstances, CPP
 
-  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2,
+  build-depends:       base >=4.7 && <4.9, parsec >=3.1 && <3.2,
                        mtl >=2.2 && <2.3, containers >=0.5 && <0.6, 
                        split >=0.2 && <0.3, array >=0.5 && <0.6,
                        MissingH >=1.3 && <1.4, pretty >=1.1 && <1.2,
-                       filepath >=1.3 && <1.4
+                       filepath >=1.3 && <1.5, base-compat == 0.9.0
 
   default-language:    Haskell2010
 
