Removed support for experimental kernel

--- a/capdl-loader-app/Kbuild
+++ b/capdl-loader-app/Kbuild
@@ -10,12 +10,6 @@
 
 apps-$(CONFIG_MODULE_CAPDL_LOADER) += capdl-loader-experimental
 
-capdl-loader-experimental-y = kernel_elf common libsel4 $(libc) libcpio libelf libsel4muslcsys libplatsupport libsel4platsupport libsel4simple libutils libsel4utils
-
-ifdef CONFIG_KERNEL_STABLE
-capdl-loader-experimental-y += libsel4simple-stable
-else
-capdl-loader-experimental-y += libsel4simple-default
-endif
+capdl-loader-experimental-y = kernel_elf common libsel4 $(libc) libcpio libelf libsel4muslcsys libplatsupport libsel4platsupport libsel4simple libutils libsel4utils libsel4simple-default
 
 capdl-loader-experimental: $(capdl-loader-experimental-y)
