--- a/capdl-loader-app/Makefile
+++ b/capdl-loader-app/Makefile
@@ -22,12 +22,7 @@ CFILES += ${BUILD_DIR}/src/capdl_spec.c
 
 ENTRY_POINT := _sel4_start
 
-LIBS := c sel4 elf cpio sel4muslcsys sel4platsupport platsupport sel4simple sel4utils utils sel4vspace
-ifdef CONFIG_KERNEL_STABLE
-LIBS += sel4simple-stable
-else
-LIBS += sel4simple-default
-endif
+LIBS := c sel4 elf cpio sel4muslcsys sel4platsupport platsupport sel4simple sel4utils utils sel4vspace sel4simple-default
 
 include $(SEL4_COMMON)/common.mk
 
