--- a/capdl-loader-app/Kconfig
+++ b/capdl-loader-app/Kconfig
@@ -10,7 +10,7 @@
 
 menuconfig MODULE_CAPDL_LOADER
     bool "CapDL Loader"
-    depends on LIB_SEL4 && HAVE_LIBC && LIB_CPIO && LIB_ELF && LIB_SEL4_MUSLC_SYS && LIB_SEL4_SIMPLE && LIB_SEL4_PLAT_SUPPORT && LIB_PLATSUPPORT && ( (LIB_SEL4_SIMPLE_DEFAULT && !KERNEL_STABLE) || (LIB_SEL4_SIMPLE_STABLE && KERNEL_STABLE))
+    depends on LIB_SEL4 && HAVE_LIBC && LIB_CPIO && LIB_ELF && LIB_SEL4_MUSLC_SYS && LIB_SEL4_SIMPLE && LIB_SEL4_PLAT_SUPPORT && LIB_PLATSUPPORT && LIB_SEL4_SIMPLE_DEFAULT
     help
         Build the CapDL loader application
 
