capdl-loader: Added dependency on sel4debug

--- a/capdl-loader-app/Kconfig
+++ b/capdl-loader-app/Kconfig
@@ -10,7 +10,7 @@
 
 menuconfig MODULE_CAPDL_LOADER
     bool "CapDL Loader"
-    depends on LIB_SEL4 && HAVE_LIBC && LIB_CPIO && LIB_ELF && LIB_SEL4_MUSLC_SYS && LIB_SEL4_SIMPLE && LIB_SEL4_PLAT_SUPPORT && LIB_PLATSUPPORT && LIB_SEL4_SIMPLE_DEFAULT
+    depends on LIB_SEL4 && HAVE_LIBC && LIB_CPIO && LIB_ELF && LIB_SEL4_MUSLC_SYS && LIB_SEL4_SIMPLE && LIB_SEL4_PLAT_SUPPORT && LIB_PLATSUPPORT && LIB_SEL4_SIMPLE_DEFAULT && HAVE_LIB_SEL4_UTILS && HAVE_LIB_SEL4_DEBUG
     help
         Build the CapDL loader application
 
