--- a/capdl-loader-app/Kbuild
+++ b/capdl-loader-app/Kbuild
@@ -10,6 +10,6 @@
 
 apps-$(CONFIG_MODULE_CAPDL_LOADER) += capdl-loader-experimental
 
-capdl-loader-experimental-y = kernel_elf common libsel4 $(libc) libcpio libelf libsel4muslcsys libplatsupport libsel4platsupport libsel4simple libutils libsel4utils libsel4simple-default
+capdl-loader-experimental-y = kernel_elf common libsel4 $(libc) libcpio libelf libsel4muslcsys libplatsupport libsel4platsupport libsel4simple libutils libsel4utils libsel4simple-default libsel4debug
 
 capdl-loader-experimental: $(capdl-loader-experimental-y)
