Prevent global capdl translator from running
Stack can install the capdl translator in a global location. If this
location is in the current user's PATH, that capdl translator will be
used to generate specs instead of the instance built in this project.
This prevents changes to capdl from being visible.

Fixes CAMKES-549

--- a/capdl-loader-app/Makefile
+++ b/capdl-loader-app/Makefile
@@ -51,4 +51,4 @@ ${BUILD_DIR}/src/capdl_spec.c: ${CAPDL_SPEC}
 	${Q}mkdir -p "$(dir $@)"
 	${Q}$(if $^,,echo "No CapDL spec provided" >&2 ; exit 1)
 	${Q}$(if $(filter 1,$(words $^)),,echo "Error: multiple CapDL specs provided: $^" >&2 ; exit 1)
-	${Q}parse-capDL --code "$@" "$^"
+	${Q}${STAGE_DIR}/parse-capDL/parse-capDL --code "$@" "$^"
