--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -21,7 +21,7 @@ category:            Development
 build-type:          Custom
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 7.8.4, GHC == 7.10.3
+tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
 executable parse-capDL
   main-is:             Main.hs
@@ -29,11 +29,11 @@ executable parse-capDL
   other-extensions:    DeriveDataTypeable, FlexibleInstances,
                        TypeSynonymInstances, CPP
 
-  build-depends:       base >=4.7 && <4.9, parsec >=3.1 && <3.2,
-                       mtl >=2.2 && <2.3, containers >=0.5 && <0.6, 
+  build-depends:       base >= 4.9 && <4.10, parsec >=3.1 && <3.2,
+                       mtl >=2.2 && <2.3, containers >=0.5 && <0.6,
                        split >=0.2 && <0.3, array >=0.5 && <0.6,
-                       MissingH >=1.3 && <1.4, pretty >=1.1 && <1.2,
-                       filepath >=1.3 && <1.5, base-compat == 0.9.0
+                       MissingH >=1.4 && <1.5, pretty >=1.1 && <1.2,
+                       filepath >=1.4 && <1.5, base-compat >= 0.9 && <0.10
 
   other-modules:       CapDL.AST, CapDL.DumpParser, CapDL.MakeModel,
                        CapDL.Matrix, CapDL.Model, CapDL.Parser,
