Capdl loader only prints using seL4_DebugPutChar
Previously, if kernel debugging was disabled (preventing the use of
seL4_DebugPutChar), the capdl loader would attempt to initialize a
serial driver to use for printing. This involved retyping memory using
allocman, the effects of which went untracked by the capdl loader.

This change prevents the loader from initializing a serial driver,
preventing printing when kernel debugging is disabled.

--- a/capdl-loader-app/Kconfig
+++ b/capdl-loader-app/Kconfig
@@ -61,7 +61,7 @@ config CAPDL_LOADER_ALLOW_NO_CSPACE
 config CAPDL_LOADER_PRINTF
     bool "Enable printing"
     default n
-    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
+    depends on LIB_SEL4_PLAT_SUPPORT_USE_SEL4_DEBUG_PUTCHAR && MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
     help
         Enable printf of information while loading for the purposes of
         debugging.
