--- a/capdl-loader-app/Kconfig
+++ b/capdl-loader-app/Kconfig
@@ -58,32 +58,24 @@ config CAPDL_LOADER_ALLOW_NO_CSPACE
         configured as such by the initialiser. Note that this requires a kernel
         that supports threads without CSpaces.
 
-config CAPDL_LOADER_PRINTF
-    bool "Enable printing"
-    default n
-    depends on LIB_SEL4_PLAT_SUPPORT_USE_SEL4_DEBUG_PUTCHAR && MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
-    help
-        Enable printf of information while loading for the purposes of
-        debugging.
-
 config CAPDL_LOADER_PRINT_DEVICE_INFO
     bool "Print device frame info on startup"
     default n
-    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED && CAPDL_LOADER_PRINTF
+    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
     help
         Dump device frame information on startup for the purposes of debugging.
 
 config CAPDL_LOADER_PRINT_UNTYPEDS
     bool "Print untyped object info on startup"
     default n
-    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED && CAPDL_LOADER_PRINTF
+    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
     help
         Dump untyped object information on startup for the purposes of debugging.
 
 config CAPDL_LOAD_PRINT_CAPDL_OBJECTS
     bool "Print capDL objects as they are created"
     default n
-    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED && CAPDL_LOADER_PRINTF
+    depends on MODULE_CAPDL_LOADER && !CAPDL_LOADER_VERIFIED
     help
         Display verbose capDL objects as they are created. Could help with debugging,
         but for large specs with lots of objects, this could slow things down significantly.
