--- a/capDL-tool/stack.yaml
+++ b/capDL-tool/stack.yaml
@@ -1,11 +1,11 @@
 #
-# Copyright 2016, Data 61
+# Copyright 2017, Data 61
 #
 # This software may be distributed and modified according to the terms of
 # the BSD 2-Clause license. Note that NO WARRANTY is provided.
 # See "LICENSE_BSD2.txt" for details.
 #
-# @TAG(D61_BSD)
+# @TAG(DATA61_BSD)
 #
 
 # Stackage LTS Haskell 7.10 (ghc-8.0.1)
