--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -23,7 +23,7 @@ category:            Development
 build-type:          Custom
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
+tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
 
 executable parse-capDL
   main-is:             Main.hs
