--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -15,10 +15,10 @@ version:             1.0.0.1
 synopsis:            A tool for processing seL4 capDL specifications.
 license:             BSD2
 license-file:        LICENSE_BSD2.txt
-author:              Gerwin Klein (NICTA), Corey Lewis (NICTA), Matthew Fernandez (NICTA)
-maintainer:          corey.lewis@nicta.com.au
+author:              Gerwin Klein (Data61), Corey Lewis (Data61), Matthew Fernandez (Data61)
+maintainer:          corey.lewis@data61.csiro.au
 homepage:            https://github.com/seL4/capDL-tool/
-copyright:           NICTA
+copyright:           Data61, CSIRO
 category:            Development
 build-type:          Custom
 extra-source-files:  README.md
