--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -17,26 +17,35 @@ license:             BSD2
 license-file:        LICENSE_BSD2.txt
 author:              Gerwin Klein (Data61), Corey Lewis (Data61), Matthew Fernandez (Data61)
 maintainer:          corey.lewis@data61.csiro.au
-homepage:            https://github.com/seL4/capDL-tool/
+homepage:            https://github.com/seL4/capdl
 copyright:           Data61, CSIRO
 category:            Development
-build-type:          Custom
+build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
+tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
 
 executable parse-capDL
   main-is:             Main.hs
 
-  other-extensions:    DeriveDataTypeable, FlexibleInstances,
-                       TypeSynonymInstances, CPP
+  other-extensions:    DeriveDataTypeable,
+                       FlexibleContexts,
+                       FlexibleInstances,
+                       TypeSynonymInstances
 
-  build-depends:       base >= 4.9 && <4.10, parsec >=3.1 && <3.2,
-                       mtl >=2.2 && <2.3, containers >=0.5 && <0.6,
-                       split >=0.2 && <0.3, array >=0.5 && <0.6,
-                       MissingH >=1.4 && <1.5, pretty >=1.1 && <1.2,
-                       filepath >=1.4 && <1.5, base-compat >= 0.9 && <0.10,
-                       unix >=2.7, yaml >=0.8 && <0.12
+  build-depends:       base >= 4.9 && <4.10,
+
+                       array >=0.5 && <0.6,
+                       base-compat >= 0.9 && <0.10,
+                       containers >=0.5 && <0.6,
+                       filepath >=1.4 && <1.5,
+                       MissingH >=1.4 && <1.5,
+                       mtl >=2.2 && <2.3,
+                       parsec >=3.1 && <3.2,
+                       pretty >=1.1 && <1.2,
+                       split >=0.2 && <0.3,
+                       unix >=2.7 && <3,
+                       yaml >=0.8 && <0.12
 
   other-modules:       CapDL.AST, CapDL.DumpParser, CapDL.MakeModel,
                        CapDL.Matrix, CapDL.Model, CapDL.Parser,
