--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -35,7 +35,8 @@ executable parse-capDL
                        mtl >=2.2 && <2.3, containers >=0.5 && <0.6,
                        split >=0.2 && <0.3, array >=0.5 && <0.6,
                        MissingH >=1.4 && <1.5, pretty >=1.1 && <1.2,
-                       filepath >=1.4 && <1.5, base-compat >= 0.9 && <0.10
+                       filepath >=1.4 && <1.5, base-compat >= 0.9 && <0.10,
+                       unix >=2.7
 
   other-modules:       CapDL.AST, CapDL.DumpParser, CapDL.MakeModel,
                        CapDL.Matrix, CapDL.Model, CapDL.Parser,
