--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -43,6 +43,7 @@ executable parse-capDL
                        mtl >=2.2 && <2.3,
                        parsec >=3.1 && <3.2,
                        pretty >=1.1 && <1.2,
+                       regex-compat >= 0.90,
                        split >=0.2 && <0.3,
                        unix >=2.7 && <3,
                        yaml >=0.8 && <0.12
