capdl-loader-app: restore old dynamic allocator
The old allocator is required if static allocation is off, or if the
platform doesn't support it. This patch restores the code and compiles
it in if the static allocator config is off.

--- a/capdl-loader-app/CMakeLists.txt
+++ b/capdl-loader-app/CMakeLists.txt
@@ -70,6 +70,11 @@ config_option(CapDLLoaderPrintCapDLObjects CAPDL_LOAD_PRINT_CAPDL_OBJECTS
     DEPENDS "NOT CapDLLoaderVerified"
 )
 
+config_option(CapDLLoaderStaticAlloc CAPDL_LOADER_STATIC_ALLOC
+    "Build the loader to expect a statically allocated capDL spec."
+    DEFAULT OFF
+)
+
 add_config_library(capdl_loader_app "${configure_string}")
 
 # The capdl-loader-app requires outside configuration in order to build. To achieve this
