--- a/object_sizes/object_sizes.yaml
+++ b/object_sizes/object_sizes.yaml
@@ -19,6 +19,7 @@ seL4_NotificationObject: seL4_NotificationBits
 seL4_SmallPageObject: seL4_PageBits
 seL4_LargePageObject: seL4_LargePageBits
 seL4_ASID_Pool: seL4_ASIDPoolBits
+seL4_ASID_Table: seL4_ASIDPoolIndexBits
 seL4_Slot: seL4_SlotBits
 seL4_Value_MinUntypedBits: seL4_MinUntypedBits
 seL4_Value_MaxUntypedBits: seL4_MaxUntypedBits
