capDL-tool: stack build --fast
This significantly improves build time with minimal effects on runtime
performance:

Building capDL-tool:

Unoptimised:
real    0m9.205s
user    0m8.597s
sys     0m0.816s

Optimised:
real    0m34.998s
user    0m34.136s
sys     0m1.170s

Time taken converting a 9000 line object file:

Unoptimised:
real    0m0.710s
user    0m0.662s
sys     0m0.048s

Optimised:
real    0m0.512s
user    0m0.475s
sys     0m0.036s

--- a/capDL-tool/Makefile
+++ b/capDL-tool/Makefile
@@ -50,9 +50,11 @@ sandbox:
 	stack build --only-dependencies
 
 # `stack install` copies the binary out of the build dir
+# --fast compiles with out any optimisations and should be more appropriate
+# for current capDL-tool usage behavior.
 .PHONY: $(TARGET)
 $(TARGET):
-	stack build
+	stack build --fast
 	stack install
 
 .PHONY: install
