capDL-tool: convert language spec to markdown
PDF building via LaTeX is still supported, and the produced PDF is
almost identical.

--- a/capDL-tool/doc/tex/Makefile
+++ b/capDL-tool/doc/tex/Makefile
@@ -12,9 +12,12 @@
 
 all: capDL.pdf
 
-capDL.pdf: capDL.tex
+capDL.pdf: capDL.tex capDL_generated.tex
 	lualatex capDL
 	lualatex capDL
+
+capDL_generated.tex: ../capDL.md
+	pandoc $< -o $@
 
 clean:
 	rm -f *.log
