capDL-tool: use foundation style
Make the language spec an official seL4 Foundation document.

--- a/capDL-tool/doc/tex/Makefile
+++ b/capDL-tool/doc/tex/Makefile
@@ -13,8 +13,8 @@
 all: capDL.pdf
 
 capDL.pdf: capDL.tex capDL_generated.tex
-	lualatex capDL
-	lualatex capDL
+	pdflatex capDL
+	pdflatex capDL
 
 capDL_generated.tex: ../capDL.md
 	pandoc $< -o $@
