--- a/capDL-tool/stack.yaml
+++ b/capDL-tool/stack.yaml
@@ -1,11 +1,7 @@
 #
-# Copyright 2017, Data 61
+# Copyright 2020, Data61, CSIRO (ABN 41 687 119 230)
 #
-# This software may be distributed and modified according to the terms of
-# the BSD 2-Clause license. Note that NO WARRANTY is provided.
-# See "LICENSE_BSD2.txt" for details.
-#
-# @TAG(DATA61_BSD)
+# SPDX-License-Identifier: BSD-2-Clause
 #
 
 # Stackage LTS Haskell 9.21 (ghc-8.0.2)
