CMake style compliance
Brings the CMake files in this repo into compliance with
the checks in `sel4_tools`.

--- a/capdl-loader-app/CMakeLists.txt
+++ b/capdl-loader-app/CMakeLists.txt
@@ -8,7 +8,9 @@ cmake_minimum_required(VERSION 3.7.2)
 
 set(configure_string "")
 
-config_choice(CapDLLoaderCallingConvention CAPDL_LOADER_CALLING_CONVENTION
+config_choice(
+    CapDLLoaderCallingConvention
+    CAPDL_LOADER_CALLING_CONVENTION
     "Select the calling convention that loaded processes are expecting. If
     you select the register convention you will be limited to passing four
     arguments to processes and their stack frames will not need to be
@@ -17,48 +19,72 @@ config_choice(CapDLLoaderCallingConvention CAPDL_LOADER_CALLING_CONVENTION
     "registers;CapDLLoaderCallingConventionRegisters;CAPDL_LOADER_CC_REGISTERS"
 )
 
-config_string(CapDLLoaderMaxObjects CAPDL_LOADER_MAX_OBJECTS
+config_string(
+    CapDLLoaderMaxObjects
+    CAPDL_LOADER_MAX_OBJECTS
     "Maximum number of objects that can be handled by the loader. Note that
     there is an upper limit on this based on the size of the initialiser's
     CNode."
-    DEFAULT 4096
+    DEFAULT
+    4096
     UNQUOTE
 )
 
-config_string(CapDLLoaderFillsPerFrame CAPDL_LOADER_FILLS_PER_FRAME
+config_string(
+    CapDLLoaderFillsPerFrame
+    CAPDL_LOADER_FILLS_PER_FRAME
     "Maximum number of fill commands per frame."
-    DEFAULT 1
+    DEFAULT
+    1
     UNQUOTE
 )
 
-config_option(CapDLLoaderWriteablePages CAPDL_LOADER_WRITEABLE_PAGES
+config_option(
+    CapDLLoaderWriteablePages
+    CAPDL_LOADER_WRITEABLE_PAGES
     "CapDL Loader will map all pages as writeable if the cap has grant permissions.
     This is currently used to enable instruction and data rewriting by an external debugger such as GDB."
-    DEFAULT OFF
+    DEFAULT
+    OFF
 )
 
-config_option(CapDLLoaderPrintDeviceInfo CAPDL_LOADER_PRINT_DEVICE_INFO
+config_option(
+    CapDLLoaderPrintDeviceInfo
+    CAPDL_LOADER_PRINT_DEVICE_INFO
     "Dump device frame information on startup for the purposes of debugging."
-    DEFAULT OFF
-    DEPENDS "NOT CapDLLoaderVerified"
+    DEFAULT
+    OFF
+    DEPENDS
+    "NOT CapDLLoaderVerified"
 )
 
-config_option(CapDLLoaderPrintUntypeds CAPDL_LOADER_PRINT_UNTYPEDS
+config_option(
+    CapDLLoaderPrintUntypeds
+    CAPDL_LOADER_PRINT_UNTYPEDS
     "Dump untyped object information on startup for the purposes of debugging."
-    DEFAULT OFF
-    DEPENDS "NOT CapDLLoaderVerified"
+    DEFAULT
+    OFF
+    DEPENDS
+    "NOT CapDLLoaderVerified"
 )
 
-config_option(CapDLLoaderPrintCapDLObjects CAPDL_LOAD_PRINT_CAPDL_OBJECTS
+config_option(
+    CapDLLoaderPrintCapDLObjects
+    CAPDL_LOAD_PRINT_CAPDL_OBJECTS
     "Display verbose capDL objects as they are created. Could help with debugging,
     but for large specs with lots of objects, this could slow things down significantly."
-    DEFAULT OFF
-    DEPENDS "NOT CapDLLoaderVerified"
+    DEFAULT
+    OFF
+    DEPENDS
+    "NOT CapDLLoaderVerified"
 )
 
-config_option(CapDLLoaderStaticAlloc CAPDL_LOADER_STATIC_ALLOC
+config_option(
+    CapDLLoaderStaticAlloc
+    CAPDL_LOADER_STATIC_ALLOC
     "Build the loader to expect a statically allocated capDL spec."
-    DEFAULT OFF
+    DEFAULT
+    OFF
 )
 
 add_config_library(capdl_loader_app "${configure_string}")
@@ -70,6 +96,9 @@ add_config_library(capdl_loader_app "${configure_string}")
 # different project directory
 add_custom_target(capdl_app_properties)
 set_property(TARGET capdl_app_properties PROPERTY C_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c")
-set_property(TARGET capdl_app_properties PROPERTY INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set_property(
+    TARGET capdl_app_properties
+    PROPERTY INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include"
+)
 
 RequireFile(CAPDL_LOADER_BUILD_HELPERS helpers.cmake)
