--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,25 @@ jobs:
       run: |
         cd capDL-tool/doc/tex
         make
+
+  python-capdl-tool:
+    name: Python build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '2.x', '3.x' ]
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install python packages
+      run: |
+        cd python-capdl-tool
+        pip install -r requirements.txt
+        pip install nose future
+    - name: Run tests
+      run: |
+        cd python-capdl-tool/tests
+        nosetests --exe
