--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,3 +46,20 @@ jobs:
       run: |
         cd python-capdl-tool/tests
         nosetests --exe
+
+  capDL-tool:
+    name: capDL-tool (ghc)
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - run: |
+        sudo apt-get install libxml2-utils
+    - uses: actions/setup-haskell@v1.1.1
+      with:
+        enable-stack: true
+        stack-setup-ghc: true
+    - name: Build and test
+      run: |
+        cd capDL-tool
+        make clean sandbox all
+        make tests
