--- a/.licenseignore
+++ b/.licenseignore
@@ -8,6 +8,7 @@ VERSION
 CHANGES
 *LICENSE_*.txt
 .licenseignore
+.reuse/dep5
 *.pyc
 *.gitignore
 *.bin
@@ -16,6 +17,6 @@ capDL-tool/*.right
 capDL-tool/*.parse
 capDL-tool/*.xml
 capDL-tool/*.test-OK
-capDL-tool/doc/imgs/*
+capDL-tool/doc/tex/imgs/*
 capDL-tool/camkes-adder-arm.*
 python-capdl-tool/.hypothesis
