object_sizes: Correctly license object_sizes.yaml
This .yaml file is preprocessed by CPP before being loaded as a yaml
file.  This unfortunately means that yaml comments are interpreted as
invalid preprocessor commands.

Signed-off-by: Kent McLeod <Kent.Mcleod@data61.csiro.au>

--- a/.licenseignore
+++ b/.licenseignore
@@ -20,3 +20,4 @@ capDL-tool/*.test-OK
 capDL-tool/doc/tex/imgs/*
 capDL-tool/camkes-adder-arm.*
 python-capdl-tool/.hypothesis
+object_sizes/object_sizes.yaml
