--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-        sudo agt-get update
+        sudo apt-get update
         sudo apt-get install libxml2-utils
     - uses: actions/setup-haskell@v1.1.4
       with:
