--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install texlive and pandoc
       run: |
+        sudo apt-get update
         sudo apt-get install pandoc texlive-latex-extra texlive-fonts-extra
     - name: Build PDF
       run: |
