--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -29,21 +29,24 @@ executable parse-capDL
                        TypeSynonymInstances,
                        TemplateHaskell
 
-  build-depends:       base >= 4.9 && <4.10,
-
+  build-depends:
+                       -- Included libraries
                        array >=0.5 && <0.6,
-                       base-compat >= 0.9 && <0.10,
+                       base >= 4.9 && <4.10,
                        containers >=0.5 && <0.6,
                        filepath >=1.4 && <1.5,
-                       MissingH >=1.4 && <1.5,
                        mtl >=2.2 && <2.3,
                        parsec >=3.1 && <3.2,
+                       unix >=2.7 && <3,
+
+                       -- Other libraries
+                       base-compat >= 0.9 && <0.10,
+                       lens >= 4.15,
+                       MissingH >=1.4 && <1.5,
                        pretty >=1.1 && <1.2,
                        regex-compat >= 0.90,
                        split >=0.2 && <0.3,
-                       unix >=2.7 && <3,
-                       yaml >=0.8 && <0.12,
-                       lens >= 4.15
+                       yaml >=0.8 && <0.12
 
   other-modules:       CapDL.AST, CapDL.DumpParser, CapDL.MakeModel,
                        CapDL.Matrix, CapDL.Model, CapDL.Parser,
