capDL-tool: update to LTS Haskell 12.26, ghc-8.4.4
Signed-off-by: Corey Lewis <corey.lewis@proofcraft.systems>

--- a/capDL-tool/capDL-tool.cabal
+++ b/capDL-tool/capDL-tool.cabal
@@ -18,7 +18,7 @@ category:            Development
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.18
-tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
+tested-with:         GHC == 8.4.4
 
 executable parse-capDL
   main-is:             Main.hs
@@ -32,7 +32,7 @@ executable parse-capDL
   build-depends:
                        -- Included libraries
                        array >=0.5 && <0.6,
-                       base >= 4.9 && <4.10,
+                       base >= 4.11 && <4.12,
                        containers >=0.5 && <0.6,
                        filepath >=1.4 && <1.5,
                        mtl >=2.2 && <2.3,
@@ -40,7 +40,7 @@ executable parse-capDL
                        unix >=2.7 && <3,
 
                        -- Other libraries
-                       base-compat >= 0.9 && <0.10,
+                       base-compat >= 0.10 && <0.11,
                        lens >= 4.15,
                        MissingH >=1.4 && <1.5,
                        pretty >=1.1 && <1.2,
